Bug#152970 Fix: Front end>> Text area not aligned properly at front end, in list view its occupy longer area

--- a/src/components/com_tjucm/media/css/tjucm.css
+++ b/src/components/com_tjucm/media/css/tjucm.css
@@ -13,3 +13,7 @@ width:200px !important;
  #item-form textarea{
     height: inherit !important;
 }
+
+.tjucm-wrapper .tj-wordwrap{
+word-break: break-word;
+}
